--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
-== 3.5.0 ==
+== 3.5.1 ==
 Switch to POSIX.Spawn instead of Open3
 Option not to ignore stderr
+Add posix as a runtime dependency
 
 == 3.4.0 ==
 Remove space between U diff option and context number. Thanks @tomas!
